# pydantic-polars

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
pydantic_polars/: __init__.py  _typing.py
pydantic_polars/_model/: _basemodel.py  _metadata.py  _model_construction.py
pydantic_polars/_validate/: __init__.py  _base_shape.py  _base_validator.py  _collect_all.py  _frame.py  _shape.py
tests/: test_validate.py
